@@ -27,7 +27,7 @@ public class LoginServlet extends HttpServlet {
         String username = req.getParameter("username");
         String password = req.getParameter("password");
 
-        if (username == null || username.isBlank() || password == null || password.isBlank()) {
+        if (username == null || username.trim().isEmpty() || password == null || password.trim().isEmpty()) {
             req.setAttribute("message", "Vui lòng nhập đầy đủ username/password.");
             req.getRequestDispatcher("/login/Login.jsp").forward(req, resp);
             return;
@@ -42,13 +42,48 @@ public class LoginServlet extends HttpServlet {
 
         HttpSession session = req.getSession();
         session.setAttribute("currentUser", user);
+        session.setAttribute("userId", user.getUserId());
+        System.out.println("Stored userId in session: " + user.getUserId());
 
+        // Lấy redirect từ session hoặc parameter (hỗ trợ từ modal trong JSP)
+        String redirect = (String) session.getAttribute("redirectAfterLogin");
+        if (redirect == null) {
+            // Nếu không có từ session, kiểm tra parameter (từ modal)
+            redirect = req.getParameter("redirect");
+        }
+
+        System.out.println("LoginServlet: Redirect URL: " + redirect);
+        session.removeAttribute("redirectAfterLogin");  // Xóa sau khi dùng
+
+        if (redirect != null && !redirect.trim().isEmpty()) {
+            // Redirect về URL gốc (an toàn: chỉ redirect nếu là URL nội bộ)
+            if (redirect.startsWith("/")) {
+                resp.sendRedirect(req.getContextPath() + redirect);
+            } else {
+                // Nếu không an toàn, redirect mặc định
+                handleDefaultRedirect(req, resp, user);
+            }
+        } else {
+            // Redirect mặc định
+            handleDefaultRedirect(req, resp, user);
+        }
+
+//        String role = user.getRole() == null ? "" : user.getRole().toLowerCase();
+//
+//        if ("admin".equals(role)) {
+//            resp.sendRedirect(req.getContextPath() + "/admin/home.jsp");
+//        } else {
+//            resp.sendRedirect(req.getContextPath() + "/customer/home.jsp");
+//        }
+    }
+
+    private void handleDefaultRedirect(HttpServletRequest req, HttpServletResponse resp, User user)
+            throws IOException {
         String role = user.getRole() == null ? "" : user.getRole().toLowerCase();
-
         if ("admin".equals(role)) {
             resp.sendRedirect(req.getContextPath() + "/admin/home.jsp");
         } else {
-            resp.sendRedirect(req.getContextPath() + "/customer/home.jsp");
+            resp.sendRedirect(req.getContextPath() + "/products");  // Về trang sản phẩm cho customer
         }
     }
 }
